--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: Welcome to my Data Universe 
+title: Welcome to My Data Universe 
 Description: My publications
