--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
+## https://github.com/pages-themes
 title: Welcome to My Data Universe 
 Description: My publications
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: jekyll-theme-midnight
